--- a/src/scss/helpers/_reset.scss
+++ b/src/scss/helpers/_reset.scss
@@ -141,7 +141,7 @@ html {
 }
 body {
     /* Layout */
-    max-width: 2000px;
+    max-width: min(2000px, 100vw) !important;
     overflow-x: hidden;
 
     /* Design */
